[tool.poetry]
name = "datetime-changer"
version = "0.1.0"
description = ""
authors = ["Stan Schepers <stan.schepers@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
